<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/main_menu_bg"
    android:clickable="true">
    <ImageView android:src="@drawable/logo" android:layout_height="wrap_content" android:layout_width="150px" android:id="@+id/imageViewGameLogo" android:scaleType="fitXY" android:adjustViewBounds="true"
               android:contentDescription=""
               android:layout_centerInParent="true"
               android:layout_alignParentTop="true"></ImageView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/mainAppNameTextView"
            android:singleLine="true"
            android:typeface="monospace"
            android:textIsSelectable="false"
            android:layout_centerInParent="true"
            android:layout_alignParentTop="false"
            android:layout_below="@+id/imageViewGameLogo"
            android:textStyle="bold"/>
    <Button android:layout_width="wrap_content" android:text="@string/buttonNewGameCaption" android:id="@+id/buttonNewGame" android:layout_height="wrap_content"
            android:layout_centerInParent="true"></Button>
    <Button android:layout_width="wrap_content" android:text="@string/buttonHelpCaption" android:id="@+id/buttonHelp" android:layout_height="wrap_content" android:layout_below="@id/buttonNewGame"
            android:layout_centerInParent="true"></Button>
    <Button android:layout_width="wrap_content" android:text="@string/buttonAboutCaption" android:id="@+id/buttonAbout" android:layout_height="wrap_content" android:layout_below="@id/buttonHelp"
            android:layout_centerInParent="true"></Button>
    <Button android:layout_width="wrap_content" android:text="@string/buttonExitCaption" android:id="@+id/buttonExit" android:layout_height="wrap_content" android:layout_below="@id/buttonAbout"
            android:layout_alignParentBottom="false"
            android:layout_centerInParent="true"></Button>
</RelativeLayout>
