<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent" android:background="@drawable/new_game_bg">

    <Button
            android:layout_height="wrap_content"
            android:layout_width="fill_parent" android:id="@+id/buttonCustomGame" android:text="@string/buttonCustomGameCaption"
            android:layout_below="@+id/buttonMultiplayer"/>
    <Button
            android:layout_width="fill_parent" android:layout_height="wrap_content"
            android:id="@+id/buttonMultiplayer" android:text="@string/buttonMultiplayerCaption"
            android:layout_centerInParent="true"/>

    <Button android:layout_alignParentBottom="true" android:layout_height="wrap_content" android:layout_width="fill_parent" android:id="@+id/buttonBackFromNewGame" android:text="@string/buttonBackCaption"></Button>
</RelativeLayout>
