<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent" android:background="@drawable/about_bg">
    <ImageView android:layout_height="wrap_content" android:src="@drawable/logo" android:layout_width="wrap_content"
               android:id="@+id/imageViewGameLogo" android:adjustViewBounds="true" android:scaleType="fitXY" android:padding="5px"
               android:layout_centerHorizontal="true" android:contentDescription=""
               android:layout_alignParentTop="true"></ImageView>
    <Button android:layout_height="wrap_content" android:layout_width="fill_parent" android:padding="5px" android:layout_gravity="bottom" android:layout_alignParentBottom="true" android:text="@string/buttonBackCaption" android:id="@+id/buttonBack"
            android:layout_centerHorizontal="true"></Button>
    <TextView android:layout_height="wrap_content" android:gravity="center" android:layout_width="fill_parent" android:text="@string/aboutText"
              android:id="@+id/textViewAboutText" android:scrollbars="vertical" android:textSize="15dip" android:textStyle="normal"
              android:layout_centerHorizontal="true" android:layout_below="@+id/appNameTextView"></TextView>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:id="@+id/appNameTextView"
            android:layout_below="@+id/imageViewGameLogo" android:layout_centerHorizontal="true"
            android:textIsSelectable="false"
            android:typeface="monospace"
            android:textStyle="bold"/>
</RelativeLayout>
